Closed Bug 15776 Opened 25 years ago Closed 25 years ago

Compilation errors with some gcc versions

Categories

(Core :: XUL, defect, P1)

x86
Linux
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: drepper, Assigned: pavlov)

Details

(Whiteboard: [has patch])

Some gcc versions have problems with using local extern "C" struct-typed
variables in functions (see bug 15773 for more info).  The following patch
helps to fix the problem.

Index: gfx/src/nsDeviceContext.cpp
===================================================================
RCS file: /cvsroot/mozilla/gfx/src/nsDeviceContext.cpp,v
retrieving revision 3.40
diff -u -u -r3.40 nsDeviceContext.cpp
--- nsDeviceContext.cpp 1999/10/05 14:49:11     3.40
+++ nsDeviceContext.cpp 1999/10/07 20:42:59
@@ -201,10 +201,10 @@
   nsIRenderingContext *pContext;
   nsresult             rv;

-  static NS_DEFINE_CID(kRCCID, NS_RENDERING_CONTEXT_CID);
+  static NS_DEFINE_CID(kRCCID2, NS_RENDERING_CONTEXT_CID);

   aContext = nsnull;
-  rv = nsComponentManager::CreateInstance(kRCCID, nsnull, NS_GET_IID(nsIRenderi
ngContext), (void **)&pContext);
+  rv = nsComponentManager::CreateInstance(kRCCID2, nsnull, NS_GET_IID(nsIRender
ingContext), (void **)&pContext);

   if (NS_OK == rv) {
     rv = InitRenderingContext(pContext, aWidget);
Assignee: trudelle → pavlov
reassigning to pavlov for consideration triage
Whiteboard: [has patch]
Severity: normal → critical
Priority: P3 → P1
Target Milestone: M11
moving up on my radar so when i look at it tomorrow i see it
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
checked in fix
Status: RESOLVED → VERIFIED
code-level fic, marking VERIFIED.
You need to log in before you can comment on or make changes to this bug.