take 2 static CID's out of two different functions and combine them into 1  r=alecf fixes bug #15776